@@ -1,11 +1,11 @@
 package Mail::Chimp;
 use Mouse;
 
-our $VERSION     = '0.11';
+our $VERSION     = '0.2';
 
 =head1 NAME
 
-Mail::Chimp - Perl wrapper around the Mailchimp v1.1 API
+Mail::Chimp - Perl wrapper around the Mailchimp v1.2 API
 
 =head1 DESCRIPTION
 
@@ -13,13 +13,13 @@ You should look at Mail::Chimp::API instead.
 
 =head1 DEPENDENCIES
 
- Mouse
+ Moose
  XMLRPC::Lite
 
 =head1 SEE ALSO
 
  XMLRPC::Lite
- <http://api.mailchimp.com/1.1/>
+ <http://www.mailchimp.com/api/rtfm/>
 
 =head1 COPYRIGHT
 
@@ -30,6 +30,8 @@ This library is free software; you can redistribute it and/or modify it under th
 =head1 AUTHOR
 
 Dave Pirotte (dpirotte@gmail.com)
+
+Drew Taylor (drew@drewtaylor.com)
 
 =cut
 
