@@ -1,12 +1,13 @@
 # -*- perl -*-
 
 # t/002_basic.t - login
-
+use strict;
+use warnings;
 use Test::More;
 use Data::Dumper;
 
-unless ( $ENV{MAILCHIMP_USERNAME} and $ENV{MAILCHIMP_PASSWORD} ) {
-    plan skip_all => 'Provide $ENV{MAILCHIMP_USERNAME} and $ENV{MAILCHIMP_PASSWORD} to run basic tests';
+unless ( $ENV{MAILCHIMP_APIKEY} ) {
+    plan skip_all => 'Provide $ENV{MAILCHIMP_APIKEY} to run basic tests';
 }
 else {
     plan 'no_plan';
@@ -14,6 +15,15 @@ else {
 
 use_ok( 'Mail::Chimp::API' );
 
-my $chimp = Mail::Chimp::API->new( username => $ENV{MAILCHIMP_USERNAME}, password => $ENV{MAILCHIMP_PASSWORD} );
-my $lists = $chimp->lists;
-diag(Dumper $lists);
+my $chimp = Mail::Chimp::API->new( api_key => $ENV{MAILCHIMP_APIKEY}, debug => $ENV{MAILCHIMP_DEBUG} );
+
+my $lists = $chimp->all_lists();
+
+{
+    my $list = $lists->[0];
+    diag("List name: ".$list->name);
+    my $email = 'drew@drewtaylor.com';
+    # my $vars = {};
+    my $success = $list->subscribe_address( $email );
+    diag("Added $email: $success");
+}
