@@ -1,5 +1,9 @@
 Revision history for Perl module Mail::Chimp
 
+Unreleased
+    - Begin creating wrapper methods for common API commands
+    
+
 0.01 Wed Mar 11 06:45:44 2009
     - original version; created by ExtUtils::ModuleMaker 0.51
 
